--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,16 @@ body {
   /* background-attachment: fixed; */
   color: #efefef;
 }
+
+/* example for gradient text */
+.ffss {
+  background-image: linear-gradient(
+    83.84deg,
+    rgb(0, 136, 255) -6.87%,
+    rgb(160, 51, 255) 26.54%,
+    rgb(255, 92, 135) 58.58%
+  );
+  background-clip: text;
+  color: transparent;
+  line-height: 85px;
+}
