--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+  overscroll-behavior: none;
   background: linear-gradient(
     67deg,
     rgb(36, 45, 57) 11.2%,
@@ -39,7 +40,6 @@ body {
   color: transparent;
   line-height: 85px;
 }
-
 
 .progress-bar {
   position: fixed;
