--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@media (-webkit-device-pixel-ratio: 1.25) {
+  * {
+    zoom: 99%;
+  }
+}
+
+@media (-webkit-device-pixel-ratio: 1.50) {
+  * {
+    zoom: 98%;
+  }
+}
+
 html {
   scroll-behavior: smooth;
   /* scroll-snap-type: mandatory; */
